--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "create-nodejs-express-app",
+  "name": "aws-dropbox",
   "version": "1.7.0",
-  "description": "Create a Node.js app for building production-ready RESTful APIs using Express, by running one command",
-  "bin": "bin/createNodejsApp.js",
+  "description": "Dropbox clone in AWS",
   "main": "src/index.js",
-  "repository": "https://github.com/hagopj13/node-express-boilerplate.git",
-  "author": "Hagop Jamkojian <hagopj13@gmail.com>",
-  "license": "MIT",
   "engines": {
     "node": ">=12.0.0"
   },
